Move trustedtypes from core/dom/trustedtypes to core/trustedtypes

A part of crbug.com/738794. trustedtypes are not related to DOM
Standard.

BUG=777761,738794

Change-Id: I56906a4ca41a3a3318b26cc52579661ed25f3c50
Reviewed-on: https://chromium-review.googlesource.com/1107519
Reviewed-by: Rakina Zata Amni <rakina@chromium.org>
Commit-Queue: Hayato Ito <hayato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568777}
Former-commit-id: d2429f7cf43028af27e7c4e2768f556296880830